--- a/class_meetings/cm08-beyond_mean_mode.html
+++ b/class_meetings/cm08-beyond_mean_mode.html
@@ -231,13 +231,12 @@ my_accent &lt;- &quot;#d95f02&quot;</code></pre>
 <h1><span class="header-section-number">1</span> Outline</h1>
 <ul>
 <li>What is “Probabilistic forecasting” and “Quantile regression”; how to interpret the forecasts/predictions; and to have a sense of when it’s appropriate to use them.</li>
-<li>Probabilistic forecasts: how to estimate (plot) predictive distribution densities using a “moving window” approach.</li>
+<li>Probabilistic forecasts: how to estimate (plot) predictive distribution densities using subset approaches.</li>
 <li>Quantile Regression:
 <ul>
 <li>How to fit a linear quantile regression model in R (using both <code>ggplot2</code> and the <code>quantreg</code> package), and how to interpret it.</li>
 <li>Understand the “crossing quantile” problem.</li>
 <li>Know how to evaluate goodness of quantile regression models</li>
-<li>Know how to estimate a quantile in a univariate sample (both in R and the “formula”, but not the optimization problem)</li>
 </ul></li>
 </ul>
 </div>
