reference blog post

--- a/class_meetings/cm08-beyond_mean_mode.html
+++ b/class_meetings/cm08-beyond_mean_mode.html
@@ -484,7 +484,7 @@ qplot(factor(x))</code></pre>
 <li>A bus company wants to know how long it takes a bus to travel between stops, for all stops and all busses.</li>
 <li>You want to predict future behaviour of customers.</li>
 </ul>
-<p>It’s common to “default” to using the mean to make decisions. But, the mean is not always appropriate:</p>
+<p>It’s common to “default” to using the mean to make decisions. But, the mean is not always appropriate (I wrote a <a href="https://vincenzocoia.github.io/20180218-mean/">blog post</a> about this):</p>
 <ul>
 <li>Sometimes there are outliers, in which case the median is a more robust measure of central tendency.
 <ul>
