--- a/class_meetings/cm09-svm.html
+++ b/class_meetings/cm09-svm.html
@@ -412,8 +412,8 @@ X, y = make_classification(n_features=4, random_state=0)</code></pre>
 <p>We can also calculate the distance to the decision boundary by appending <code>.decision_function</code>:</p>
 <pre><code>my_model.decision_function(X)</code></pre>
 </div>
-<div id="feedback-on-lab-1" class="section level1">
-<h1><span class="header-section-number">10</span> Feedback on Lab 1</h1>
+<div id="feedback-on-assignment-1" class="section level1">
+<h1><span class="header-section-number">10</span> Feedback on Assignment 1</h1>
 <p>Hard to say which exercise needs most attention – perhaps Exercise 4, then perhaps Exercise 2.</p>
 </div>
 <div id="lab" class="section level1">
