--- a/class_meetings/cm10-selection.html
+++ b/class_meetings/cm10-selection.html
@@ -216,7 +216,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">BAIT 509 Class Meeting 10</h1>
-<h3 class="subtitle"><em>Model Selection and Predictor Selection</em></h3>
+<h3 class="subtitle"><em>Feature and Model Selection</em></h3>
 <h4 class="date"><em>Wednesday, March 28, 2018</em></h4>
 
 </div>
@@ -323,52 +323,9 @@ mean((dat$y - predict(fit))^2)</code></pre>
 <p><strong>Regularization</strong> adds a penalty directly to this loss function, that grows as the number of predictors grows. This is in contrast to the specialized measures (like adjusted <span class="math inline">\(R^2\)</span>) that adds the penalty to the error term <em>after</em> the model is fit. There are different types of regularization, but typically those that involve an L1 regularizer are used in feature selection.</p>
 </div>
 </div>
-<div id="in-class-exercise" class="section level1">
-<h1><span class="header-section-number">6</span> In-Class Exercise</h1>
-<p>From 573 lab 1.</p>
-<p>Many statistics exist that we can use to assess how good a model is. Fill in the following table of model statistics:</p>
-<table>
-<thead>
-<tr class="header">
-<th>Performance metric</th>
-<th>Definition</th>
-<th>When does it apply?</th>
-</tr>
-</thead>
-<tbody>
-<tr class="odd">
-<td>AIC</td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td>BIC</td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>MSE</td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td>classification error rate</td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td>adjusted <span class="math inline">\(R^2\)</span></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td><a href="https://en.wikipedia.org/wiki/Mallows's_Cp">Mallow’s <span class="math inline">\(C_p\)</span></a></td>
-<td></td>
-<td></td>
-</tr>
-</tbody>
-</table>
-<p>Hint - a good resource for these model statistics can be found in <a href="http://www-bcf.usc.edu/~gareth/ISL/ISLR%20Sixth%20Printing.pdf">ISLR</a>. See Chapter 2 for MSE &amp; classification error, and Chapter 6 for AIC, BIC, adjusted <span class="math inline">\(R^2\)</span> &amp; Mallow’s <span class="math inline">\(C_p\)</span>.</p>
+<div id="lab" class="section level1">
+<h1><span class="header-section-number">6</span> Lab</h1>
+<p>Use the remaining class time to work on your group projects.</p>
 </div>
 
 
