--- a/class_meetings/cm09-svm.html
+++ b/class_meetings/cm09-svm.html
@@ -392,7 +392,7 @@ knitr::opts_chunk$set(fig.width=6, fig.height=3, fig.align=&quot;center&quot;)</
 <li>Fit the model.</li>
 <li>Query the fit.</li>
 </ol>
-<p>You can run classification in python with the <code>sklearn.svm</code> bundle of methods. From this bundle, the method <code>SVC</code> is useful for SVM’s (despite its name), and <code>LinearSVC</code> is a special case when the classification boundary is linear (what we’ve been calling SVC).</p>
+<p>You can run classification in python with the <code>sklearn.svm</code> module. From this module, the method <code>SVC</code> is useful for SVM’s (despite its name), and <code>LinearSVC</code> is a special case when the classification boundary is linear (what we’ve been calling SVC).</p>
 <p>Load <code>SVC</code> like so:</p>
 <pre><code>from sklearn import svm</code></pre>
 <p>Let’s use a dataset from the documentation</p>
