last changes to cm10

--- a/class_meetings/cm10.html
+++ b/class_meetings/cm10.html
@@ -244,11 +244,11 @@ div.tocify {
 <div id="alternatives-to-accuracy" class="section level1">
 <h1><span class="header-section-number">2</span> Alternatives to Accuracy</h1>
 <ol style="list-style-type: decimal">
-<li>Breast cancer data set: <a href="http://archive.ics.uci.edu/ml/datasets/Breast+Cancer" class="uri">http://archive.ics.uci.edu/ml/datasets/Breast+Cancer</a></li>
+<li><a href="https://raw.githubusercontent.com/vincenzocoia/BAIT509/master/data/breast_cancer.csv">Breast cancer</a> data set (<a href="http://archive.ics.uci.edu/ml/datasets/Breast+Cancer">source</a>)</li>
 <li>Calculate accuracies of some models. Include “all negative” model, too.</li>
 <li>Make confusion matrices; define FPR and TPR (and synonyms); define aggregate measures.</li>
-<li>Try a different threshold for logistic regression and RF.</li>
-<li>Introduce ROC. Compare ROC for all three models.</li>
+<li>Try different thresholds.</li>
+<li>Introduce ROC: X=FPR, Y=TPR. Compare ROC for all three models.</li>
 <li>Use case: choosing a threshold; AUC to evaluate overall model performance.</li>
 </ol>
 </div>
